# RAG-backend

./: .dockerignore  .env.example  .gitignore  .gitmessage  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.search.yml  docker-compose.server.yml  justfile  pyproject.toml  sr.sh
.github/workflows/: ci.yml
docker/elasticsearch-ik/: Dockerfile
docker/nginx/: default.conf
docs/: development.md  word_chunk_logic.md  标题识别增强方案 [已完成].md
docs/plans/: 文档分块表格处理功能实现计划[已完成].md
scripts/: check_commit_msg.py
src/baozhi_rag/api/: admin_users.py  auth.py  chat.py  dependencies.py  files.py  health.py  routes.py  search.py
src/baozhi_rag/app/: exception_handlers.py  main.py
src/baozhi_rag/core/: config.py  exceptions.py  logging.py  request_context.py
src/baozhi_rag/domain/: default_domain_terms.txt  knowledge_file.py  knowledge_file_blob.py  knowledge_file_blob_repository.py  knowledge_file_errors.py  knowledge_file_repository.py  knowledge_upload_task.py  knowledge_upload_task_repository.py  registration_email_sender.py  registration_verification.py  registration_verification_repository.py  term_dictionary.py  user.py  user_errors.py  user_repository.py
tests/: conftest.py  test_aliyun_oss_download_stream.py  test_app_startup.py  test_chunk_search_service.py  test_config.py  test_database_models.py  test_document_chunk_search_fields.py  test_document_preview_indexing.py  test_elasticsearch_chunk_store.py  test_file_delete_api.py  test_search_api.py  test_term_matching.py
tests/api/: test_files.py  test_health.py
tests/services/: test_document_chunking.py  test_file_upload.py  test_knowledge_file_delete.py  test_upload_tasks.py
(+37 files in other folders)
